--- a/manifest.json
+++ b/manifest.json
@@ -78,6 +78,9 @@
     "h5" : {
         "router" : {
             "mode" : "history"
+        },
+        "devServer" : {
+            "https" : true
         }
     }
 }
