--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "uview-ui": "^1.5.2"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0"
+    "copy-webpack-plugin": "^5.0.0",
+    "mockjs": "^1.1.0"
   }
 }
