--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "xylon",
   "license": "ISC",
   "dependencies": {
+    "get-value": "^3.0.1",
     "uview-ui": "^1.8.3"
   },
   "devDependencies": {
