--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "get-value": "^3.0.1",
+    "numbro": "^2.3.2",
     "uview-ui": "^1.8.3"
   },
   "devDependencies": {
