--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "xylon",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.21",
     "numbro": "^2.3.2",
     "uview-ui": "^1.8.4"
   },
